# flake-templates

./: README.md  flake.nix
bluespec/: flake.nix
c-cpp/: flake.nix
clash/: flake.nix
empty/: flake.nix
flutter/: flake.nix
go/: flake.nix
haskell/: flake.nix
idris/: flake.nix
loongarch/: flake.nix  main.s
loongarch-rust-linux/: flake.nix
loongarch-rust-linux/.cargo/: config.toml
loongarch-rust-linux/assembly/: main.s
markdown/: flake.nix
node/: flake.nix
riscv/: flake.nix
riscv-rust-linux/: .asm-lsp.toml  Cargo.toml  flake.nix  main.s
ruby/: flake.nix
rust/: Cargo.toml  clippy.toml  flake.nix
rust-toolchain/: flake.nix
zig/: flake.nix
