[package]
name = "default"
version = "0.1.0"
edition = "2024"

[dependencies]

# https://corrode.dev/blog/pitfalls-of-safe-rust/
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# pedantic
pedantic = { level = "warn", priority = -1 }
must_use_candidate = { level = "allow", priority = 0 }
missing_errors_doc = { level = "allow", priority = 0 }

nursery = { level = "warn", priority = -1 }
cargo = "warn"

# restriction
unwrap_used = "warn" # Discourage using .unwrap() which can cause panics
expect_used = "warn" # Discourage using .expect() which can cause panics

[profile.release]
opt-level = 3
debug = true             # set to false to disable debug info
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
